# Forma-o-Backend

./: 02_transacoes.py
APIs Assicronas com FastAPI/: .gitignore  anotações.md
APIs Assicronas com FastAPI/dio-blog/: database.py  main.py  pyproject.toml
APIs Assicronas com FastAPI/dio-blog/controllers/: post.py
APIs Assicronas com FastAPI/dio-blog/models/: post.py
APIs Assicronas com FastAPI/dio-blog/schemas/: post.py
APIs Assicronas com FastAPI/dio-blog/views/: post.py
Api com Flask/: anot.txt  pyproject.toml
Api com Flask/dio_bank/: pyproject.toml
Api com Flask/dio_bank/instance/: blog.sqlite  dio_bank.sqlite
Api com Flask/dio_bank/migrations/versions/: 1db54d9f0747_add_paswd.py  30aa599096eb_add_active_attr_in_user.py  87c594bbed84_initial_migration.py  d08c844694f6_initial_migration.py
Api com Flask/dio_bank/src/: app.py  db.py  utils.py
Api com Flask/dio_bank/src/controllers/: auth.py  post.py  role.py  user.py
Api com Flask/dio_bank/tests/: conftest.py  test_utils.py
Api com Flask/dio_bank/tests/integration/controllers/: conftest.py  test_user.py
Api com Flask/src/: app.py  db.py
FullStack com Django/: anotações.md
FullStack com Django/mysite/: build.sh  db.sqlite3  pyproject.toml
FullStack com Django/mysite/accounts/: urls.py  views.py
FullStack com Django/mysite/accounts/templates/accounts/: login.html
FullStack com Django/mysite/contacts/: forms.py  urls.py  views.py
FullStack com Django/mysite/contacts/migrations/: 0001_initial.py
FullStack com Django/mysite/contacts/templates/contacts/: create.html
FullStack com Django/mysite/mysite/: admin.py  settings.py  urls.py
FullStack com Django/mysite/polls/: models.py  views.py
FullStack com Django/mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_question_x.py  0004_alter_choice_options_alter_question_options.py
FullStack com Django/mysite/polls/templates/polls/: index.html
FullStack com Django/mysite/templates/admin/: base.html
FullStack com Django/mysite/tests/contacts/: test_views.py
Gerenciamento de pacotes/pipenv/: pipenv.txt
Gerenciamento de pacotes/poetry/: poetry.txt  pyproject.toml
SGBD/: 01_conexao.py  01_dbapi.py  meu_banco.db
