[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "C2002G",email = "claudiogabrieldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standart] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
