[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "C2002G",email = "claudiogabrieldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "flask-migrate",
    "pytest",
    "pytest-mock"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


