[project]
name = "fullstack_com_django"
version = "0.1.0"
description = ""
authors = [
    {name = "C2002G",email = "claudiogabrieldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython"
]
