[project]
name = "fullstack_com_django"
version = "0.1.0"
description = ""
authors = [
    {name = "C2002G",email = "claudiogabrieldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
    "dj-database-url",
    "psycopg2-binary",
    "whitenoise[brotli]",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
python_files = "test_*.py"
addopts = "--tb=short"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "pytest-django"
]
