[project]
name = "autodidatismo"
version = "0.1.0"
description = ""
authors = [
    {name = "C2002G",email = "claudiogabrieldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "asgiref (>=3.9.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
